default_old/objects/Archive_Job_Item__c/Archive_Job_Item__c.object-meta.xml
<CustomObject>
    <label>Archive Job Item</label>
    <nameField>
        <displayFormat>AJI-{0000}</displayFormat>
        <label>Archive Job Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Job Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>