default_old/objects/Archive_Job_Item__c/fields/Archive_External_Link__c.field-meta.xml
<CustomField>
    <fullName>Archive_External_Link__c</fullName>
    <label>Archive External Link</label>
    <type>Url</type>
</CustomField>