default_old/objects/Archive_Job_Item__c/fields/Last_Ran_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Ran_DateTime__c</fullName>
    <label>Last Ran DateTime</label>
    <type>DateTime</type>
</CustomField>