default_old/objects/Archive_Job_Item__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <description>Archive Range. For example date range, ID range, String range, Number range used to archive the records</description>
    <label>Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>