default_old/objects/Archive_Job_Item__c/fields/Range_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Range_End_Date__c</fullName>
    <label>Range End Date</label>
    <type>DateTime</type>
</CustomField>